Fixed spacing of gallery section, added rounded corners, formatted the quote section

--- a/style.css
+++ b/style.css
@@ -37,5 +37,34 @@ nav .logo {
     max-width: 424px;
 }
 .gallery {
+    height: 416px;
+    max-width: 816px;
     justify-content: center;
+    row-gap: 24px;
+    margin-top: 32px;
+    text-align: center;
+}
+.gallery h2 {
+    margin-bottom: 40px;
+}
+.gallery img {
+    border-radius: 23px 23px 23px 23px;
+    -webkit-border-radius: 23px 23px 23px 23px;
+    -moz-border-radius: 23px 23px 23px 23px;
+}
+.quote {
+    height: 360px;
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+blockquote {
+    max-width: 800px;
+    font-size: 2rem;
+}
+cite {
+    display: block;
+    text-align: right;
+    margin-top: 1em;
 }
